swagger setup for get and delete
